Background change and font color change

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="./assets/linkedinIcon.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/dagemtadesse'"
           />
           <img
-            src="./assets/github.png"
+            src="./assets/icons8-github-64.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/dagtades/'"
@@ -321,7 +321,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="./assets/icons8-email-100.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -329,7 +329,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="./assets/linkedinIcon.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
