Changed the resume to a new one

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/DagemTadesse_Resume2.0.pdf')"
+            onclick="window.open('./assets/DagemTadesse_Resume1.pdf')"
           >
             Resume
           </button>
